--- a/index.html
+++ b/index.html
@@ -137,24 +137,12 @@
     }
 
     /* Custom font size and tighter spacing for education and work experience */
-    #education .timeline-item p {
-      font-size: 1.1em;
-      line-height: 0.05;
-    }
-    #work-experience .timeline-item p {
-      font-size: 1.1em;
-      line-height: 0.05;
-    }
-
-    /* Make credentials under #about section align like education */
-    #about .timeline {
-      text-align: left;
-    }
-    #about .timeline-item p {
-      font-size: 1.1em;
-      line-height: 0.05;
-      padding-left: 0px;
-    }
+#education .timeline-item p,
+#work-experience .timeline-item p,
+#about .timeline-item p {
+  font-size: 1.1em;
+  line-height: 1.4;
+}
   </style>
 </head>
 <body>
