--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div class="timeline">
       <div class="timeline-item">
         <h3>撰文</h3>
-        <p>許立懿（2023年10月）- 在校表現好在家變個人？談小孩的「放學後自制力崩潰」- 親子天下</p>
+        <p>許立懿（2023年10月）。 在校表現好在家變個人？談小孩的「放學後自制力崩潰」— 親子天下</p>
       </div>
       <div class="timeline-item">
         <h3>論文</h3>
@@ -252,21 +252,28 @@
       <p>我曾經在寶寶六個月大時，自己嘗試讓他練習自主入睡，那一天成功入睡，但大人回房後大哭到大家都無法睡覺，最後只能抱起來安撫，又開始無止盡的哄睡。
 現在寶寶十個月大，從原本的小睡、夜晚長睡眠都需要有大人哄睡、陪睡、無法自行接覺跟夜醒5-6次，經過半個月的練習後，可以自己在嬰兒床自行入睡、無夜醒，我不需要再因為小孩睡在我身旁繃緊神經、或擔心大人不在時摔下床，也不會因為哄不睡小孩而生氣，現在我的寶寶有一個心情美麗的媽媽，非常感謝立懿的幫助！</p>
     </div>
+    <div class="card">
+      <h3>小P媽媽（寶貝1歲6個月）</h3>
+      <p>小P是我的第一個孩子，我是超級新手媽媽，對於睡覺這件事我只能不斷的看醫師或一些學家寫的文章做參考，但完全沒有頭緒，該怎麼做我其實也不太知道，好多且連續的夜晚都是被孩子的哭聲嚇醒。
+遇到立懿之後，小P的睡眠整個很規律，再回推回去這1年半我終於明白孩子夜醒的問題是什麼了。
+開始訓練的那2週真的很不容易，每天遇到的狀況都不一樣。還好有立懿的帶領跟建議、還有先生的全力支持。
+我們現在的生活真的很美好，不再被睡覺這件事綁架了！</p>
+    </div>
   </section>
 
   <section id="services">
     <h2>服務方案</h2>
     <div class="card">
       <h3>完整睡眠諮詢：分為兩周和三周方案</h3>
-      <p>適用於孩子矯正月齡滿4個月至3歲內，有夜醒、哄睡依賴、睡太少、作息不規律等任何睡眠問題</p>
+      <p>適合孩子矯正月齡滿4個月至3歲內，有夜醒、哄睡依賴、睡太少、作息不規律等任何睡眠問題</p>
     </div>
     <div class="card">
       <h3>單次諮詢：嬰幼兒睡眠習慣建立</h3>
-      <p>適用於想初步瞭解睡眠概念的父母</p>
+      <p>適合想初步瞭解睡眠概念的父母／照顧者</p>
     </div>
     <div class="card">
       <h3>單次諮詢：新生兒諮詢</h3>
-      <p>適用於未滿4個月的嬰幼兒、或是孕產期的準爸媽</p>
+      <p>適合未滿4個月的嬰幼兒、或是孕產期的準爸媽</p>
     </div>
   </section>
 
