--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <h2>服務方案</h2>
     <div class="card">
       <h3>完整睡眠諮詢：分為兩周和三周方案</h3>
-      <p>適合孩子矯正月齡滿4個月至3歲內，有夜醒、哄睡依賴、睡太少、作息不規律等任何睡眠問題</p>
+      <p>適合孩子矯正月齡滿4個月至3歲，有夜醒、哄睡依賴、睡太少、作息不規律等任何睡眠問題</p>
     </div>
     <div class="card">
       <h3>單次諮詢：嬰幼兒睡眠習慣建立</h3>
