--- a/index.html
+++ b/index.html
@@ -244,6 +244,10 @@
   <section id="feedback">
     <h2>家長回饋</h2>
     <div class="card">
+      <h3>小F媽媽 (寶貝4個月)</h3>
+      <p>能夠找到睡眠顧問立懿簡直是救星來了！之前每天都要抱哄搖到手酸，寶寶哭媽媽一起哭，而且根本沒得休息。顧問的指導不但拯救了爸媽的睡眠，也幫寶寶調整了作息。最棒的是，睡眠顧問不只提供專業，更給予了滿滿情緒價值，讓爸媽在辛苦的過程中也能被支持。整個訓練引導絕不是網路流傳的百歲派方式，也沒有殘忍的 CIO，而是用滿滿的愛和堅持陪伴寶寶。現在寶寶能開始自主入睡，我也更了解他的個性，真的覺得超級值得和推薦！</p>
+    </div>
+    <div class="card">
       <h3>小A媽媽 (寶貝2歲6個月)</h3>
       <p>我很感謝立懿願意輔導我們！因為對小孩睡眠習慣/能力倒退感到焦慮，原本他可以好好在床裡睡覺，突然間很排斥床。諮詢睡眠顧問時也擔心突然要讓小孩練習回到自己在床裡面睡覺，怕會讓他心理受創。但是立懿非常有耐心且願意給我們時間去跟小孩溝通，讓我安心很多！立懿也提供我非常多有用的方法跟小孩溝通，以及教我如何把孩子的睡覺環境安排得更安全。過程中小孩的接受度超過我跟先生預期的。現在孩子已經不會看到嬰兒床就崩潰，也可以在嬰兒床裡安心睡覺，就算醒來或是睡前有點情緒也不會要從床裡爬出來了！真的覺得很感動！</p>
     </div>
