--- a/index.html
+++ b/index.html
@@ -244,20 +244,20 @@
   <section id="feedback">
     <h2>家長回饋</h2>
     <div class="card">
-      <h3>小F媽媽 (寶貝4個月)</h3>
+      <h3>小F媽媽（寶貝4個月） - 2025.07</h3>
       <p>能夠找到睡眠顧問立懿簡直是救星來了！之前每天都要抱哄搖到手酸，寶寶哭媽媽一起哭，而且根本沒得休息。顧問的指導不但拯救了爸媽的睡眠，也幫寶寶調整了作息。最棒的是，睡眠顧問不只提供專業，更給予了滿滿情緒價值，讓爸媽在辛苦的過程中也能被支持。整個訓練引導絕不是網路流傳的百歲派方式，也沒有殘忍的 CIO，而是用滿滿的愛和堅持陪伴寶寶。現在寶寶能開始自主入睡，我也更了解他的個性，真的覺得超級值得和推薦！</p>
     </div>
     <div class="card">
-      <h3>小A媽媽 (寶貝2歲6個月)</h3>
+      <h3>小A媽媽（寶貝2歲6個月） - 2025.05</h3>
       <p>我很感謝立懿願意輔導我們！因為對小孩睡眠習慣/能力倒退感到焦慮，原本他可以好好在床裡睡覺，突然間很排斥床。諮詢睡眠顧問時也擔心突然要讓小孩練習回到自己在床裡面睡覺，怕會讓他心理受創。但是立懿非常有耐心且願意給我們時間去跟小孩溝通，讓我安心很多！立懿也提供我非常多有用的方法跟小孩溝通，以及教我如何把孩子的睡覺環境安排得更安全。過程中小孩的接受度超過我跟先生預期的。現在孩子已經不會看到嬰兒床就崩潰，也可以在嬰兒床裡安心睡覺，就算醒來或是睡前有點情緒也不會要從床裡爬出來了！真的覺得很感動！</p>
     </div>
     <div class="card">
-      <h3>小S媽媽 (寶貝10個月)</h3>
+      <h3>小S媽媽（寶貝10個月） - 2025.05</h3>
       <p>我曾經在寶寶六個月大時，自己嘗試讓他練習自主入睡，那一天成功入睡，但大人回房後大哭到大家都無法睡覺，最後只能抱起來安撫，又開始無止盡的哄睡。
 現在寶寶十個月大，從原本的小睡、夜晚長睡眠都需要有大人哄睡、陪睡、無法自行接覺跟夜醒5-6次，經過半個月的練習後，可以自己在嬰兒床自行入睡、無夜醒，我不需要再因為小孩睡在我身旁繃緊神經、或擔心大人不在時摔下床，也不會因為哄不睡小孩而生氣，現在我的寶寶有一個心情美麗的媽媽，非常感謝立懿的幫助！</p>
     </div>
     <div class="card">
-      <h3>小P媽媽（寶貝1歲6個月）</h3>
+      <h3>小P媽媽（寶貝1歲6個月） - 2025.04</h3>
       <p>小P是我的第一個孩子，我是超級新手媽媽，對於睡覺這件事我只能不斷的看醫師或一些學家寫的文章做參考，但完全沒有頭緒，該怎麼做我其實也不太知道，好多且連續的夜晚都是被孩子的哭聲嚇醒。
 遇到立懿之後，小P的睡眠整個很規律，再回推回去這1年半我終於明白孩子夜醒的問題是什麼了。
 開始訓練的那2週真的很不容易，每天遇到的狀況都不一樣。還好有立懿的帶領跟建議、還有先生的全力支持。
