--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
     <div class="timeline">
       <div class="timeline-item">
         <h3>撰文</h3>
+        <p>許立懿（2025年07月）。 「明明累到哭，卻怎麼都不睡？」3步驟培養自行入睡的孩子 — 親子天下</p>
         <p>許立懿（2023年10月）。 在校表現好在家變個人？談小孩的「放學後自制力崩潰」— 親子天下</p>
       </div>
       <div class="timeline-item">
